feat: added pump modulation
